more work on reconfiguring process. Reduced AnnotationValueBuilder dependency on table record input